# ActiveHybridMooring

./: .gitignore  README.md
MATLAB/: MoorDyn_SFunc_test.m  MoorDyn_SFunc_test_3dof.m  MoorDyn_SFunc_test_6dof.m  Simulink_results_dynamic_relax.csv  build_MoorDyn_SFunc.m  moordyn_matlab_test.m  moordyn_sfunc.cpp  moordyn_sfunc_3dof.cpp  moordyn_sfunc_6dof.cpp  run_ahm_model_no_actuators.m
MoorDyn/: ahm_3dof.txt  ahm_3dof_dynamic_relax.txt  ahm_6dof.txt  oc3.out  oc3.txt  rm3.out  rm3.txt  rm3_Body1.out  rm3_Line7.out
OpenFASTModel/: Run_modSFunc_test.m  modSFunc_test.mdl  modSFunc_test_zeros.mdl  openfast_results.ipynb
Simulink/: AHM_loop.slx  MD_sfunc_test_3dof.slx  MD_sfunc_test_6dof.slx  ahm_model_no_actuators.slx
SurrogateModel/: CMakeLists.txt  ahm_model_no_actuators.slx  commands for calling python from matlab.txt  create_surrogate_models.cpp  create_surrogate_models_pylk.py  openfast_lin_results_sampling.parquet  openfast_results.ipynb  predict_motions.cpp  predict_motions.py  predict_motions_compile_instructions.txt  run_ahm_model.m  test_surrogate_model.ipynb
SurrogateModel/OpenFAST files/: VolturnUS-15MW_Taut_1000m.fst
SurrogateModel/npy_files/: l1px.npy  l1py.npy  l1pz.npy  l1vx.npy  l1vy.npy  l1vz.npy  l2px.npy  l2py.npy  l2pz.npy  l2vx.npy  l2vy.npy  l2vz.npy  l3px.npy  l3py.npy  l3pz.npy  l3vx.npy  l3vy.npy  l3vz.npy  xt1.npy  xt2.npy  xt3.npy
SurrogateModel/predict_motions/: predict_motions.sln
c/: CMakeLists.txt  moordyn_c_test.c
cpp/: CMakeLists.txt  ahm_3dof.cpp  ahm_6dof.cpp  moordyn_cpp_test.cpp
fortran/: CMakeLists.txt  (+1 more)
(+12 files in other folders)
